<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/custom_size20"
    android:background="@color/black1">


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_back"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:textSize="@dimen/text_size14"
            android:paddingLeft="@dimen/custom_size8"
            android:drawableTint="@color/white"
            android:drawableLeft="@mipmap/back"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Forgot Password"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/text_size20"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_toRightOf="@id/txt_back"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/custom_size10"
            android:layout_marginTop="@dimen/custom_size100"
            >



            <TextView
                android:layout_marginTop="@dimen/custom_size40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_forgotcontent"
                android:textColor="@color/grey"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/text_size14"

                />

            <TextView
                android:layout_marginTop="@dimen/custom_size30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_email"
                android:textColor="@color/label"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/text_size12"
                />
            <EditText
                android:layout_marginTop="5dp"
                android:id="@+id/edtxt_emailphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/custom_size8"
                android:drawableRight="@mipmap/email"
                android:padding="@dimen/custom_size12"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/text_size12"
                android:hint="@string/string_email_hint"
                android:singleLine="true"
                android:textColorHint="@color/label"
                android:textColor="@color/label"
                android:background="@drawable/editxt_bg_new"/>




            <LinearLayout
                android:visibility="gone"
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="@dimen/custom_size15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_otp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="@dimen/text_size12"
                    />
                <EditText
                    android:layout_marginTop="5dp"
                    android:id="@+id/edtxt_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/custom_size8"
                    android:drawableLeft="@mipmap/phone"
                    android:padding="@dimen/custom_size12"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="@dimen/text_size12"
                    android:hint="@string/string_otp_hint"
                    android:singleLine="true"
                    android:background="@drawable/editxt_bg_new"/>

                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_password"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="@dimen/text_size12"
                    />
                <EditText
                    android:id="@+id/edtxt_password"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/custom_size12"
                    android:drawablePadding="@dimen/custom_size8"
                    android:drawableLeft="@mipmap/password"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="@dimen/text_size12"
                    android:hint="@string/string_password_hint"
                    android:singleLine="true"
                    android:background="@drawable/editxt_bg_new"/>

                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_confpass"

                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="@dimen/text_size12"
                    />
                <EditText
                    android:id="@+id/edtxt_confpass"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/custom_size12"
                    android:drawablePadding="@dimen/custom_size8"
                    android:drawableLeft="@mipmap/password"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="@dimen/text_size12"
                    android:hint="@string/string_confpass_hint"
                    android:singleLine="true"
                    android:background="@drawable/editxt_bg_new"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edtxt_send"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/string_send"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/text_size14"
                android:textAllCaps="false"
                android:background="@drawable/button_bg_new"/>

        </LinearLayout>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>