<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black1">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/custom_size20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="FINANCE FLOW"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/text_size20" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/custom_size10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/string_signup"
                    android:textColor="@color/label"
                    android:textSize="@dimen/text_size25" />

                <TextView
                    android:layout_marginTop="@dimen/custom_size20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_name"
                    android:textColor="@color/label"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="@dimen/text_size12"
                    />
                <EditText
                    android:id="@+id/edtxt_name"
                    android:layout_marginTop="@dimen/custom_size5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/custom_size12"
                    android:drawablePadding="@dimen/custom_size8"
                    android:drawableRight="@mipmap/name"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="@dimen/text_size12"
                    android:hint="@string/string_name_hint"
                    android:singleLine="true"
                    android:textColorHint="@color/label"
                    android:textColor="@color/label"
                    android:background="@drawable/editxt_bg_new"/>


                <TextView
                    android:layout_marginTop="@dimen/custom_size20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_email"
                    android:textColor="@color/label"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="@dimen/text_size12"

                    />
                <EditText
                    android:id="@+id/edtxt_email"
                    android:layout_marginTop="@dimen/custom_size5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/custom_size12"
                    android:drawablePadding="@dimen/custom_size8"
                    android:drawableRight="@mipmap/email"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="@dimen/text_size12"
                    android:hint="@string/string_email_hint"
                    android:singleLine="true"
                    android:textColorHint="@color/label"
                    android:textColor="@color/label"
                    android:background="@drawable/editxt_bg_new"/>


                <TextView
                    android:layout_marginTop="@dimen/custom_size15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_password"
                    android:textColor="@color/label"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="@dimen/text_size12"
                    />
                <EditText
                    android:id="@+id/edtxt_password"
                    android:layout_marginTop="@dimen/custom_size5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/custom_size12"
                    android:drawablePadding="@dimen/custom_size8"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="@dimen/text_size12"
                    android:drawableTint="@color/label"
                    android:drawableRight="@mipmap/password"
                    android:hint="@string/string_password_hint"
                    android:singleLine="true"
                    android:textColorHint="@color/label"
                    android:textColor="@color/label"
                    android:inputType="textPassword"
                    android:background="@drawable/editxt_bg_new"/>

                <TextView
                    android:layout_marginTop="@dimen/custom_size15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_confpass"
                    android:textColor="@color/label"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="@dimen/text_size12"
                    />

                <EditText
                    android:id="@+id/edtxt_confpass"
                    android:layout_marginTop="@dimen/custom_size5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/custom_size12"
                    android:drawablePadding="@dimen/custom_size8"
                    android:drawableRight="@mipmap/password"
                    android:drawableTint="@color/label"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="@dimen/text_size12"
                    android:hint="@string/string_confpass_hint"
                    android:singleLine="true"
                    android:textColorHint="@color/label"
                    android:textColor="@color/label"
                    android:background="@drawable/editxt_bg_new"/>



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_singup"
                    android:layout_marginTop="@dimen/custom_size30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/string_singup"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="@dimen/text_size14"
                    android:textAllCaps="false"
                    android:background="@drawable/button_bg_new"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/custom_size10"
                        android:layout_marginRight="@dimen/custom_size5"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/String_alreadyhave"
                        android:textAlignment="center"
                        android:textColor="@color/label"
                        android:textSize="@dimen/text_size14"
                        android:layout_marginTop="10dp"
                        />

                    <TextView
                        android:id="@+id/txt_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/custom_size10"
                        android:fontFamily="@font/roboto_medium"
                        android:text="Sign in"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size16" />

                </LinearLayout>


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>